--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="main-block__container">
                 <img src="img/main-block/slogan.png" alt="" class="container__slogan-img">
-                <p class="container__text">Погрузитесь в магию океана! Раскройте тайны песен китов, ощутите ритм волн и
+                <p class="container__text">Погрузитесь в магию океана! Раскройте тайны песен китов, ощутите ритм волн<br>и
                     обретите гармонию в глубинах безмолвного спокойствия.</p>
                 <button class="container__button openModal">ЗАРЕГИСТРИРОВАТЬСЯ</button>
             </div>
